# thunderbird-release-readiness

./: README.md  get-metrics  get-metrics.py  pyproject.toml  requirements.txt
src/thunderbird_metrics/: __init__.py  metrics_collector.py
